--- a/TWIPEE_SNS/app/src/main/AndroidManifest.xml
+++ b/TWIPEE_SNS/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         <activity
             android:name=".CommentActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".LikeUserActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
