v6 SNSPostDetailActivity.java 관련 추가

--- a/TWIPEE_SNS/app/src/main/AndroidManifest.xml
+++ b/TWIPEE_SNS/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         <activity
             android:name=".LikeUserActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".SNSPostDetailActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
